add .status.snapID to MantleBackup CRD
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
@@ -131,6 +131,9 @@ spec:
               pvcManifest:
                 description: '''pvcManifest'' saving backup target PVC manifests'
                 type: string
+              snapID:
+                description: '''snapID'' indicates SNAPID of `rbd snap ls`'
+                type: integer
             type: object
         type: object
     served: true
