add Service for secondary mantle to mantle chart
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/test/e2e/testdata/values-mantle-secondary.yaml
+++ b/test/e2e/testdata/values-mantle-secondary.yaml
@@ -3,3 +3,8 @@ controller:
   mantleServiceEndpoint: ":58080"
   ports:
     - containerPort: 58080
+
+secondaryService:
+  type: NodePort
+  port: 58080
+  targetPort: 58080
