Add Expire field to MB
We designed MantleBackupConfig expires MantleBackup, but it was not good
because replicated MantleBackups on the secondary will not be able to
expired if the primary and the secondary are disconnected.  To fix this,
we introduce Expire on the MB itself.

Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
@@ -41,6 +41,11 @@ spec:
           spec:
             description: MantleBackupSpec defines the desired state of MantleBackup
             properties:
+              expire:
+                description: '''expire'' specifies the expiration duration of the
+                  backup'
+                format: duration
+                type: string
               namespace:
                 description: '''namespace'' specifies backup target Namespace'
                 type: string
