Use large runner for e2e
It attemps making e2e faster.

Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: "ubuntu-22.04"
+    runs-on: mantle_large_runner_16core
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
