--- a/test/e2e/testdata/values-mantle-secondary.yaml
+++ b/test/e2e/testdata/values-mantle-secondary.yaml
@@ -3,6 +3,8 @@ controller:
   mantleServiceEndpoint: ":58080"
   ports:
     - containerPort: 58080
+  objectStorageBucketName: dummy
+  objectStorageEndpoint: dummy
 
 secondaryService:
   type: NodePort
