ci: make sure there're no uncommitted `make generate` changes
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,5 +24,6 @@ jobs:
           key: go-${{ hashFiles('go.sum', 'Makefile', 'versions.mk') }}
           restore-keys: |
             go-
+      - run: make generate && make check-uncommitted
       - run: make lint
       - run: make test
