--- a/test/e2e/multik8s/testdata/rbd-pool-sc-template.yaml
+++ b/test/e2e/multik8s/testdata/rbd-pool-sc-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: ceph.rook.io/v1
 kind: CephBlockPool
 metadata:
-  name: %s
+  name: rook-ceph-block
   namespace: %s
 spec:
   failureDomain: osd
@@ -12,11 +12,11 @@ spec:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: %s
+  name: rook-ceph-block
 provisioner: rook-ceph.rbd.csi.ceph.com
 parameters:
   clusterID: %s
-  pool: %s
+  pool: rook-ceph-block
   imageFormat: "2"
   imageFeatures: layering
   csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
