test/e2e: use RGW for e2e testing
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,5 @@ Dockerfile.cross
 
 test/e2e/testdata/persistentvolumes.yaml
 test/e2e/testdata/values-mantle-primary.yaml
+test/e2e/testdata/values-mantle-secondary.yaml
 include/
