--- a/test/e2e/testdata/values-mantle-primary-template.yaml
+++ b/test/e2e/testdata/values-mantle-primary-template.yaml
@@ -1,5 +1,7 @@
 controller:
   role: primary
   mantleServiceEndpoint: {ENDPOINT}
-  objectStorageBucketName: dummy
-  objectStorageEndpoint: dummy
+  objectStorageBucketName: {OBJECT_STORAGE_BUCKET_NAME}
+  objectStorageEndpoint: {OBJECT_STORAGE_ENDPOINT}
+  envSecret: export-data
+  exportDataStorageClass: rook-ceph-block
