test/e2e: Makefile: add minikube-profile-{secondary,primary} targets
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -200,6 +200,13 @@ install-ceph-object-store:
 install-ceph-object-store-secret:
 	$(KUBECTL) apply -f $(TMPDIR)/secret-export-data.json
 
+.PHONY: minikube-profile-primary
+minikube-profile-primary:
+	$(MINIKUBE) profile $(MINIKUBE_PROFILE_PRIMARY)
+.PHONY: minikube-profile-secondary
+minikube-profile-secondary:
+	$(MINIKUBE) profile $(MINIKUBE_PROFILE_SECONDARY)
+
 .PHONY: image-build
 image-build:
 	eval $$($(MINIKUBE) docker-env); \
