add short name `mr` for MantleRestore
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlerestores.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlerestores.yaml
@@ -11,6 +11,8 @@ spec:
     kind: MantleRestore
     listKind: MantleRestoreList
     plural: mantlerestores
+    shortNames:
+    - mr
     singular: mantlerestore
   scope: Namespaced
   versions:
