add garbage collector runner to remove orphan PVs
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -85,6 +85,9 @@ spec:
             {{- with .Values.controller.exportDataStorageClass }}
             - --export-data-storage-class={{ . }}
             {{- end }}
+            {{- with .Values.controller.gcInterval }}
+            - --gc-interval={{ . }}
+            {{- end }}
           env:
             - name: POD_NAME
               valueFrom:
