--- a/test/e2e/testdata/values-mantle-secondary-template.yaml
+++ b/test/e2e/testdata/values-mantle-secondary-template.yaml
@@ -6,6 +6,7 @@ controller:
   objectStorageBucketName: {OBJECT_STORAGE_BUCKET_NAME}
   objectStorageEndpoint: {OBJECT_STORAGE_ENDPOINT}
   envSecret: export-data
+  gcInterval: 1s
 
 secondaryService:
   type: NodePort
