test/e2e: multik8s: requeue reconciliation immediately to speed up testing
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/test/e2e/testdata/values-mantle-secondary-template.yaml
+++ b/test/e2e/testdata/values-mantle-secondary-template.yaml
@@ -7,6 +7,9 @@ controller:
   objectStorageEndpoint: {OBJECT_STORAGE_ENDPOINT}
   envSecret: export-data
   gcInterval: 1s
+  env:
+    - name: REQUEUE_RECONCILIATION_IMMEDIATELY
+      value: "1"
 
 secondaryService:
   type: NodePort
