--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -108,6 +108,9 @@ spec:
                   fieldPath: metadata.namespace
             - name: POD_IMAGE
               value: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
+            {{- range .Values.controller.env }}
+            - {{ toYaml . | nindent 14 }}
+            {{- end }}
           ports:
             {{- toYaml .Values.controller.ports | nindent 12 }}
         - command:
