--- a/test/e2e/testdata/values-mantle-primary-template.yaml
+++ b/test/e2e/testdata/values-mantle-primary-template.yaml
@@ -9,3 +9,6 @@ controller:
   #httpProxy: http://host.minikube.internal:8899
   #httpsProxy: http://host.minikube.internal:8899
   #noProxy: localhost,127.0.0.1,10.96.0.0/12
+  env:
+    - name: REQUEUE_RECONCILIATION_IMMEDIATELY
+      value: "1"
