--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         package:
           - replication
+          - replicationfailure
           - changetostandalone
           - changetoprimary
           - changetosecondary
