ci: set timeouts for e2e tests
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -29,6 +29,7 @@ jobs:
           - changetosecondary
     #runs-on: "ubuntu-22.04"
     runs-on: mantle_large_runner_16core
+    timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
