enable errorlint of golangci-lint
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,9 +19,10 @@ issues:
 linters:
   disable-all: true
   enable:
+    - copyloopvar
     - dupl
     - errcheck
-    - copyloopvar
+    - errorlint
     - goconst
     - gocyclo
     - gofmt
