test/e2e: eliminate purging unnecessary deb packages
We use a large runner which has larger disk than the default
runner. So it's not necessary to increase available space.

Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/.github/actions/set-up-kvm-for-e2e-tests/action.yaml
+++ b/.github/actions/set-up-kvm-for-e2e-tests/action.yaml
@@ -1,5 +1,5 @@
 name: "Set up KVM for end-to-end tests"
-description: "This action sets up KVM for end-to-end tests. It purges lots of unnecessary deb packages, too."
+description: "This action sets up KVM for end-to-end tests."
 inputs: {}
 outputs: {}
 runs:
