charts/mantle: change `image:` so that mantle can work right out of the box
The current values of `image:` in values.yaml of charts/mantle are
written for the e2e tests. Thus, the users need to overwrite them when
they want to use Mantle in the real environments.

This commit fixes the problem above by changing the values for real
deployment.

Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/values.yaml
+++ b/charts/mantle/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: controller
-  pullPolicy: IfNotPresent
-  tag: latest
+  repository: ghcr.io/cybozu-go/mantle
+  pullPolicy:
+  tag: # {{ .Chart.AppVersion }}
 
 imagePullSecrets: []
 nameOverride: ""
