--- a/test/e2e/testdata/values-mantle1.yaml
+++ b/test/e2e/testdata/values-mantle1.yaml
@@ -1,3 +1,8 @@
+image:
+  repository: controller
+  pullPolicy: IfNotPresent
+  tag: latest
+
 controller:
   overwriteMBCSchedule: "* * * * *"
   gcInterval: 1s
