--- a/test/e2e/testdata/values-mantle-primary-template.yaml
+++ b/test/e2e/testdata/values-mantle-primary-template.yaml
@@ -1,3 +1,8 @@
+image:
+  repository: controller
+  pullPolicy: IfNotPresent
+  tag: latest
+
 controller:
   role: primary
   mantleServiceEndpoint: {ENDPOINT}
