--- a/test/e2e/testdata/values-mantle-secondary-template.yaml
+++ b/test/e2e/testdata/values-mantle-secondary-template.yaml
@@ -1,3 +1,8 @@
+image:
+  repository: controller
+  pullPolicy: IfNotPresent
+  tag: latest
+
 controller:
   role: secondary
   mantleServiceEndpoint: ":58080"
