ci: release packages.zip with COPYING* files
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.github/workflows/ceph-export-diff-release.yaml
+++ b/.github/workflows/ceph-export-diff-release.yaml
@@ -19,6 +19,6 @@ jobs:
       - run: make -C ceph build
       - run: |
           VERSION=${GITHUB_REF#refs/tags/}
-          zip -j packages.zip ceph/packages/*.deb
+          zip -j packages.zip ceph/packages/*.deb ceph/packages/COPYING*
           gh release create ${VERSION} -t "Release ${VERSION}"
           gh release upload ${VERSION} packages.zip
