--- a/test/e2e/testdata/values-mantle-primary-template.yaml
+++ b/test/e2e/testdata/values-mantle-primary-template.yaml
@@ -17,3 +17,4 @@ controller:
   env:
     - name: REQUEUE_RECONCILIATION_AFTER
       value: "1s"
+  backupTransferPartSize: {BACKUP_TRANSFER_PART_SIZE}
