charts/mantle: support .values.controller.backupTransferPartSize
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -99,6 +99,9 @@ spec:
             {{- with .Values.controller.noProxy }}
             - --no-proxy={{ . }}
             {{- end }}
+            {{- with .Values.controller.backupTransferPartSize }}
+            - --backup-transfer-part-size={{ . }}
+            {{- end }}
           env:
             - name: POD_NAME
               valueFrom:
