--- a/charts/mantle/templates/deployment.yaml
+++ b/charts/mantle/templates/deployment.yaml
@@ -190,7 +190,7 @@ spec:
               secretKeyRef:
                 key: ceph-username
                 name: rook-ceph-mon
-          image: quay.io/cybozu/ceph:18.2.1.1
+          image: ghcr.io/cybozu/ceph:18.2.4.2
           imagePullPolicy: IfNotPresent
           name: toolbox
           securityContext:
