test/e2e: increase node disk size to 30GB
The default disk size of the node is 20GB, which is often not enough
for our e2e tests and results in test failure like:

        $ kubectl exec -n rook-ceph deploy/mantle-controller -- rbd ls -p rook-ceph-block
        Defaulted container "mantle" out of: mantle, toolbox
        unable to get monitor info from DNS SRV with service name: ceph-mon
        rbd: couldn't connect to the cluster!
        rbd: listing images failed: (2) No such file or directory
        2025-03-10T06:33:22.886+0000 7f0808e9ee00 -1 failed for service _ceph-mon._tcp
        2025-03-10T06:33:22.887+0000 7f0808e9ee00 -1 monclient: get_monmap_and_config cannot identify monitors to contact
        command terminated with exit code 2

        $ kubectl logs -n rook-ceph mantle-controller-7c85c596db-688bz -c toolbox
        cat: write error: No space left on device
        Mon Mar 10 06:22:53 UTC 2025 writing mon endpoints to /etc/ceph/ceph.conf: a=10.105.179.76:6789
        cat: write error: No space left on device

This commit resolves the problem above by increasing the disk size by 10GB.

Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -148,6 +148,7 @@ do-minikube-start:
 					--extra-config=kubeadm.node-name=$(NODE_NAME) \
 					--extra-config=kubelet.hostname-override=$(NODE_NAME) \
 					--network mantle-test \
+					--disk-size=30g \
 					-p $(MINIKUBE_PROFILE) ; \
 				if [ "$$?" -eq 0 ]; then \
 					ok=1; \
