test/e2e/multik8s: use TLS
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -62,7 +62,19 @@ test-multiple-k8s-clusters:
 	$(MAKE) install-rook-ceph-operator
 	$(MAKE) install-rook-ceph-cluster1
 	$(MAKE) install-ceph-object-store
+	$(MAKE) install-cert-manager
 	$(MAKE) install-mantle-cluster-wide
+# set up a k8s cluster for primary mantle
+	$(MAKE) launch-minikube MINIKUBE_PROFILE=$(MINIKUBE_PROFILE_PRIMARY)
+	$(MAKE) install-rook-ceph-operator
+	$(MAKE) install-rook-ceph-cluster1
+	$(MAKE) install-ceph-object-store-secret
+	$(MAKE) install-cert-manager
+	$(MAKE) install-mantle-cluster-wide
+# prepare TLS certificates
+	$(MAKE) install-tls-certificates NAMESPACE=$(CEPH_CLUSTER1_NAMESPACE)
+# start mantle-controller in the secondary cluster
+	$(MAKE) minikube-profile-secondary
 	sed \
 		-e "s%{OBJECT_STORAGE_BUCKET_NAME}%$$(cat $(TMPDIR)/cm-export-data.json | jq -r .data.BUCKET_NAME)%" \
 		-e "s%{OBJECT_STORAGE_ENDPOINT}%http://$$(cat $(TMPDIR)/cm-export-data.json | jq -r .data.BUCKET_HOST)%" \
@@ -72,12 +84,11 @@ test-multiple-k8s-clusters:
 		NAMESPACE=$(CEPH_CLUSTER1_NAMESPACE) \
 		HELM_RELEASE=mantle \
 		VALUES_YAML=testdata/values-mantle-secondary.yaml
-# set up a k8s cluster for primary mantle
-	$(MAKE) launch-minikube MINIKUBE_PROFILE=$(MINIKUBE_PROFILE_PRIMARY)
-	$(MAKE) install-rook-ceph-operator
-	$(MAKE) install-rook-ceph-cluster1
-	$(MAKE) install-ceph-object-store-secret
-	$(MAKE) install-mantle-cluster-wide
+# update the TLS certificates to include IP SAN of the secondary mantle-controller endpoint
+	$(MAKE) install-tls-certificates NAMESPACE=$(CEPH_CLUSTER1_NAMESPACE)
+	$(MINIKUBE) -p $(MINIKUBE_PROFILE_SECONDARY) kubectl -- rollout restart -n $(CEPH_CLUSTER1_NAMESPACE) deploy/mantle-controller
+# start mantle-controller in the primary cluster
+	$(MAKE) minikube-profile-primary
 	sed \
 		-e "s%{ENDPOINT}%$$($(MINIKUBE) service list -p $(MINIKUBE_PROFILE_SECONDARY) -o json | jq -r '.[] | select(.Name == "mantle" and .Namespace == "rook-ceph") | .URLs | select(. | length > 0)[]' | head -1 | sed -r 's/^http:\/\///')%" \
 		-e "s%{OBJECT_STORAGE_BUCKET_NAME}%$$(cat $(TMPDIR)/cm-export-data.json | jq -r .data.BUCKET_NAME)%" \
@@ -90,7 +101,6 @@ test-multiple-k8s-clusters:
 		HELM_RELEASE=mantle \
 		VALUES_YAML=testdata/values-mantle-primary.yaml
 # start testing
-	$(MINIKUBE) profile $(MINIKUBE_PROFILE_PRIMARY)
 	$(MAKE) do-test-multik8s
 
 .PHONY: clean
@@ -220,6 +230,51 @@ install-ceph-object-store:
 .PHONY: install-ceph-object-store-secret
 install-ceph-object-store-secret:
 	$(KUBECTL) apply -f $(TMPDIR)/secret-export-data.json
+
+.PHONY: install-cert-manager
+install-cert-manager:
+	$(HELM) upgrade --install --version $(CERT_MANAGER_VERSION) --repo https://charts.jetstack.io \
+		--create-namespace --namespace cert-manager --set crds.enabled=true --wait \
+		cert-manager cert-manager
+
+.PHONY: install-tls-certificates
+install-tls-certificates:
+# Create a TLS certificate in the primary cluster.
+	$(MAKE) minikube-profile-primary
+	$(KUBECTL) apply -f testdata/cert-primary.yaml
+# In order to get the regenerated Secret for sure, delete the existing secret if any.
+	kubectl delete secret -n $(NAMESPACE) cert-mantle || true
+# Wait until a Secret for the certificates is created.
+	until kubectl get secret -n $(NAMESPACE) cert-mantle >/dev/null ; do sleep 1; done
+# Dump ca.crt in the secret to import it to the secondary cluster.
+	kubectl get secret -n $(NAMESPACE) cert-mantle -o json | jq -r '.data."ca.crt"' | base64 -d > $(TMPDIR)/primary-ca.crt
+	$(MAKE) minikube-profile-secondary
+	kubectl create cm mantle-primary-ca-crt -n $(NAMESPACE) --from-file=ca.crt=$(TMPDIR)/primary-ca.crt \
+		--output yaml --dry-run=client | kubectl apply -f -
+# Create a TLS certificate in the secondary cluster.
+#
+# Before creating a Certificate resource, we need to replace the {ENDPOINT} placeholder
+# in the template file with the IP address of the secondary mantle-controller's Service endpoint.
+# By doing so, the generated TLS certificate will have an IP SAN of that IP address,
+# so the primary mantle-controller can access the secondary via TLS without any hostname.
+# If the Service doesn't exist (i.e., the secondary mantle-controller is not started yet),
+# just erase the placeholder.
+	sed \
+		-e "s%{ENDPOINT}%$$(\
+			IPADDR=$$($(MINIKUBE) service list -p $(MINIKUBE_PROFILE_SECONDARY) -o json | jq -r '.[] | select(.Name == "mantle" and .Namespace == "rook-ceph") | .URLs | select(. | length > 0)[]' | head -1 | sed -r 's/^http:\/\/([^:]+).*$$/\1/'); \
+			if [ "$$IPADDR" = "" ]; then echo -n ""; else echo -n "\"$${IPADDR}\""; fi)%" \
+		testdata/cert-secondary-template.yaml \
+		> $(TMPDIR)/cert-secondary.yaml
+	$(KUBECTL) apply -f $(TMPDIR)/cert-secondary.yaml
+# In order to get the regenerated Secret for sure, delete the existing secret if any.
+	kubectl delete secret -n $(NAMESPACE) cert-mantle || true
+# Wait until a Secret for the certificates is created.
+	until kubectl get secret -n $(NAMESPACE) cert-mantle >/dev/null ; do sleep 1; done
+# Dump ca.crt in the secret to import it to the primary cluster.
+	kubectl get secret -n $(NAMESPACE) cert-mantle -o json | jq -r '.data."ca.crt"' | base64 -d > $(TMPDIR)/secondary-ca.crt
+	$(MAKE) minikube-profile-primary
+	kubectl create cm mantle-secondary-ca-crt -n $(NAMESPACE) --from-file=ca.crt=$(TMPDIR)/secondary-ca.crt \
+		--output yaml --dry-run=client | kubectl apply -f -
 
 .PHONY: minikube-profile-primary
 minikube-profile-primary:
