charts/mantle: support injection of Deployment's annotations
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/charts/mantle/values.yaml
+++ b/charts/mantle/values.yaml
@@ -15,6 +15,7 @@ serviceAccount:
   annotations: {}
   name: "mantle-controller"
 
+annotations: {}
 podAnnotations: {}
 podLabels: {}
 resources: {}
