--- a/.github/workflows/ceph-export-diff-test.yaml
+++ b/.github/workflows/ceph-export-diff-test.yaml
@@ -3,6 +3,7 @@ on:
   pull_request:
     paths:
       - "ceph/**"
+      - "!ceph/README.md"
 jobs:
   test:
     runs-on: mantle_large_runner_16core
